<resources>
    <string name="app_name">Money Management</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="title_add">Add</string>
    <string name="title_notification">Notification</string>
    <string name="title_user">User</string>
    <string name="title_sign_in">Login</string>
    <string name="title_sign_up">Register</string>
    <string name="title_setting">Setting</string>
    <string name="title_update_history">Update History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">"Welcome ! "</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_re_password">Confirm Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign In</string>

    <string name="invalid_username">Not a valid Email</string>
    <string name="required_username">Username is required!</string>
    <string name="required_name">FullName is required!</string>
    <string name="required_password">Password is required!</string>
    <string name="required_phone">Phone number is required!</string>
    <string name="required_date">Date is required!</string>
    <string name="required_money">Input money is required!</string>
    <string name="required_re_password">Confirm password is required</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>
    <string name="redirect_register">"Don't you have a account? Register now"</string>
    <string name="redirect_login">Already have a account? Sign in now</string>
    <string name="forget_password">Forgot password?</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="change_password">Change Password</string>
    <string name="update_balance">Update Balance</string>
    <string name="enter_date">Enter date</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_money">Enter Money</string>
    <string name="language">Language</string>
    <string name="no_filter">No Filter</string>
    <string name="no_data">No data available</string>

    <string name="create_account_failed">Created with error</string>
    <string name="create_account_successfully">User Created.</string>
    <string name="msg_request_permission">Please accept for required permission.</string>
    <string name="update_balance_successfully">Updated balance successfully</string>
    <string name="update_expense_successfully">Updated expense successfully</string>

    <string name="surplus">Surplus</string>
    <string name="prompt_surplus">Surplus</string>
    <string name="prompt_total">Total</string>
    <string name="prompt_spend">Spend</string>
    <string name="prompt_loan">Loan</string>
    <string name="prompt_lend">Lend</string>
    <string name="prompt_borrow">Borrow</string>
    <string name="prompt_food">Food</string>
    <string name="prompt_living">Living</string>
    <string name="prompt_car">Car</string>
    <string name="prompt_boy">Boy</string>
    <string name="prompt_fashion">Fashion</string>
    <string name="prompt_healthcare">Heath</string>

    <string name="expenditure_statistics_table">Expenditure statistics table</string>

    <string name="prompt_collect">Collect</string>
    <string name="prompt_salary">Salary</string>


    <string name="item_account_information">Account Information</string>
    <string name="item_history">History</string>
    <string name="item_about_us">About Us</string>
    <string name="item_sign_out">Sign Out</string>
    <string name="item_notification">Notification</string>
    <string name="item_setting">Setting</string>
    <string name="item_language_vietnamese">Vietnamese</string>
    <string name="item_language_english">English</string>
    <string name="item_less_100">Less than 100K</string>
    <string name="item_100_500">From 100 - 500K</string>
    <string name="item_greater_500">Greater than 500K</string>

    //Cho vay
    <string name="loan">Loan</string>
    <string name="enter_loan_amount">Loan entry</string>
    <string name="debtor">Debtor</string>
    <string name="borrowing_date">Borrowing date</string>
    <string name="pay_date">Pay date</string>
    //Thống kê


    <string-array name="list_item_account">
        <item>@string/item_account_information</item>
        <item>@string/item_setting</item>
        <item>@string/item_notification</item>
        <item>@string/item_history</item>
        <item>@string/item_about_us</item>
        <item>@string/item_sign_out</item>
    </string-array>

    <string-array name="list_item_contact">
        <item>Liên hệ với thành viên 1 qua facebook</item>
        <item>Liên hệ với thành viên 2 qua facebook</item>
        <item>Liên hệ với thành viên 3 qua facebook</item>
    </string-array>

    <string-array name="list_item_language">
        <item>@string/item_language_vietnamese</item>
        <item>@string/item_language_english</item>
    </string-array>

    <string-array name="list_item_value_money">
        <item>@string/no_filter</item>
        <item>@string/item_less_100</item>
        <item>@string/item_100_500</item>
        <item>@string/item_greater_500</item>
    </string-array>

</resources>