<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:background="@color/color_white">

    <androidx.cardview.widget.CardView
        android:id="@+id/details"
        android:layout_width="380dp"
        android:layout_height="442dp"
        android:layout_below="@+id/cardViewGraph"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="150dp"
            android:text="@string/loan"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/spinner_style"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_money" />

        <com.example.doanjava.helpers.CurrencyEditText
            android:id="@+id/value_money"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/enter_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/debtor"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLogin" />

        <EditText
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/borrowing_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"></EditText>

        <EditText
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="310dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/pay_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"></EditText>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_style"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_password"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>