<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:background="@color/color_white">

    <androidx.cardview.widget.CardView
        android:id="@+id/details"
        android:layout_width="380dp"
        android:layout_height="442dp"
        android:layout_below="@+id/cardViewGraph"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/spinner_style"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_money" />
        <com.example.doanjava.helpers.CurrencyEditText
            android:id="@+id/value_money"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/enter_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/debtor"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/debtor"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLogin" />
        <EditText
            android:id="@+id/borrowing"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/borrowing_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"></EditText>
        <EditText
            android:id="@+id/pay_day"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/pay_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"></EditText>

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="380dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_expense" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>